feat: create new family groups for new users from /signup
