# docs/swagger.json
@@ -191,6 +191,18 @@
                         "name": "profilePicture",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "New User's default family group Name",
+                        "name": "familyGroupName",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "New User's default family group Description",
+                        "name": "familyGroupDescription",
+                        "in": "formData"
                     }
                 ],
                 "responses": {}
@@ -282,13 +294,6 @@
                         "type": "string",
                         "description": "Password of the new user",
                         "name": "password",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "User's default group ID",
-                        "name": "defaultGroupID",
                         "in": "formData",
                         "required": true
                     },
